--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/rian39">View on GitHub</a>
 
-          <h1 id="project_title">Rian39.GitHub.io</h1>
+          <h1 id="project_title">Adrian Mackenzie</h1>
           <h2 id="project_tagline">Research blog</h2>
 
         </header>
